# fundamental-analysis-system

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DESIGN_FLAWS_ANALYSIS.md  GEMINI.md  README.md  SECURITY.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini
.github/workflows/: codeql.yml  test.yml
archive/: README.md  V1-V2_MERGE_DOCUMENTATION.md
design-decisions/: DD-001_GATE_6_LEARNING_VALIDATION.md  DD-002_EVENT_DRIVEN_MEMORY_SYNC.md  DD-003_DEBATE_DEADLOCK_RESOLUTION.md  DD-004_GATE_6_PARAMETER_OPTIMIZATION.md  DD-005_MEMORY_SCALABILITY_OPTIMIZATION.md  DD-006_NEGATIVE_FEEDBACK_SYSTEM.md  DD-007_PATTERN_VALIDATION_ARCHITECTURE.md  DD-008_AGENT_CREDIBILITY_SYSTEM.md  DD-009_DATA_RETENTION_PATTERN_EVIDENCE.md  FLAW_02_FIX_EVENT_DRIVEN_MEMORY_SYNC.md  GATE_6_DESIGN_DECISIONS.md  INDEX.md  TEMPLATE.md
docs/: README.md  SCREENING_DATA_SOURCE_RESEARCH_SUMMARY.md
docs/architecture/: 01-system-overview.md  02-memory-system.md  03-agents-specialist.md  04-agents-support.md  05-agents-coordination.md  06-agents-output.md  07-collaboration-protocols.md  07-data-collector-agent.md  08-screener-agent.md
docs/archive/: HYBRID_DATA_SOURCING.md  data-collector-mvp-simfin-review.md
docs/archive/design-flaws/: 00-SUMMARY.md  PRIORITY.md
docs/archive/historical-design/: DESIGN_ANALYSIS_REPORT_v2.1_2025-11-19.md  multi_agent_fundamental_analysis_system_design.md  multi_agent_fundamental_analysis_v2.0.md
docs/design-decisions/: DD-001_GATE_6_LEARNING_VALIDATION.md  DD-002_EVENT_DRIVEN_MEMORY_SYNC.md  DD-003_DEBATE_DEADLOCK_RESOLUTION.md  DD-004_GATE_6_PARAMETER_OPTIMIZATION.md  DD-005_MEMORY_SCALABILITY_OPTIMIZATION.md  DD-006_NEGATIVE_FEEDBACK_SYSTEM.md  DD-007_PATTERN_VALIDATION_ARCHITECTURE.md  DD-008_AGENT_CREDIBILITY_SYSTEM.md  DD-009_DATA_RETENTION_PATTERN_EVIDENCE.md  DD-010_DATA_CONTRADICTION_RESOLUTION.md  DD-011_AGENT_CHECKPOINT_SYSTEM.md  DD-012_WORKFLOW_PAUSE_RESUME.md  DD-013_ARCHIVE_LIFECYCLE_MANAGEMENT.md  DD-014_VALIDATION_GAPS_RESOLUTION.md  DD-015_AGENT_FAILURE_ALERT_SYSTEM.md  DD-016_L1_MEMORY_DURABILITY.md  DD-017_FAILURE_CORRELATION_SYSTEM.md  DD-018_MEMORY_FAILURE_RESILIENCE.md  DD-019_DATA_TIER_OPERATIONS.md  DD-020_MEMORY_ACCESS_CONTROL.md  DD-021_NEO4J_HA.md  DD-022_MACRO_ANALYST_AGENT.md  DD-026_MACRO_REPORTS.md  DD-027_UNIFIED_HYBRID_SEARCH_ARCHITECTURE.md  DD-028_REDIS_PERSISTENCE_STRATEGY.md  DD-029_ELASTICSEARCH_INDEX_MAPPING_STANDARD.md  DD-030_ELASTICSEARCH_RRF_IMPLEMENTATION.md  DD-031_SEC_FILING_PARSER_TOOL_SELECTION.md  DD-032_HYBRID_DATA_SOURCING.md  DD-033_SCREENING_DATA_SOURCE_EDGARTOOLS.md  INDEX.md
docs/design-flaws/: 00-SUMMARY.md  03-pattern-validation.md  04-credibility-scoring.md  05-data-retention.md  06-expertise-routing.md  08-debate-deadlock.md  10-gate-6-parameters.md  11-algorithm-specs.md  12-archive-lifecycle.md  13-validation-gaps.md  14-statistical-reliability.md  15-failure-modes.md  16-timeline-conflicts.md  17-data-tier-mgmt.md  18-learning-asymmetry.md  19-partial-failures.md  20-access-control.md  21-scalability.md  DEPENDENCIES.md  INDEX.md  MINOR-ISSUES.md  PRIORITY.md  README.md  RESOLVING.md  ROADMAP.md  STATUS.md  generate_index.py  resolve_flaw.py
docs/design-flaws/active/: 06-expertise-routing.md  12-archive-lifecycle.md  13-validation-gaps.md  14-statistical-reliability.md  15-failure-modes.md  16-timeline-conflicts.md  17-data-tier-mgmt.md  18-learning-asymmetry.md  19-partial-failures.md  20-access-control.md  21-scalability.md  22-agent-checkpoints.md  23-workflow-pause-resume.md  24-agent-failure-alerts.md  25-working-memory-durability.md  26-multi-stock-batching.md
docs/design-flaws/future/: 06-expertise-routing.md  18-learning-asymmetry.md  22-queue-management.md
docs/design-flaws/resolved/: 01-missing-human-gate.md  02-memory-sync-timing.md  (+25 more)
docs/implementation/: 01-roadmap.md  02-tech-requirements.md  03-risks-compliance.md  04-glossary.md  05-credibility-system.md
docs/learning/: 01-learning-systems.md  02-feedback-loops.md  03-metrics.md
docs/operations/: 01-analysis-pipeline.md  02-human-integration.md  03-data-management.md
examples/: README.md
examples/agent-implementations/: README.md
examples/api-integrations/: README.md
examples/memory-operations/: README.md
examples/workflow-scripts/: README.md
plans/: data-collector-backfill-strategy.md  data-collector-implementation.md  data-collector-parse-failure-strategy.md  data-collector-screener-scoped.md  edgartools-screening-implementation.md  macro-analyst-integration-remaining-work.md  macro-industry-analysis-plan.md  parse-failure-improvements-phase1.md  simfin-integration-plan.md  yahoo-finance-integration-plan.md
plans/archive/: SIMFIN_EVALUATION_ARCHIVED.md
research/: FINDINGS_EdgarTools_Builtin_Metrics.md  FINDINGS_EdgarTools_Field_Normalization.md  FINDINGS_EdgarTools_Time_Series.md  FINDINGS_Multi_Filing_10Y_CAGR.md  FINDINGS_builtin_metrics_raw.json  IMPLEMENTATION_9_Filing_Approach.md  RESEARCH_TODO.md  explore_statement_structure.py  explore_tenk_api.py  test_builtin_metrics.py  test_builtin_metrics_deep_dive.py  test_dataframe_structure.py  test_edgartools_field_access.py  test_edgartools_field_normalization.py  test_getter_methods_vs_calculate_ratios.py  test_getter_type_issues.py  test_multifiling_10y_cagr.py  test_raw_data_extraction.py  test_statement_structure.py  test_time_series_extraction.py  time_series_test_results.json
scripts/: 01-init-test-db.sql  setup_minio.sh  verify_s3_select.sh
src/: __init__.py
src/storage/: README.md  __init__.py  elasticsearch_setup.py  embedding_generator.py  filter_builder.py  postgres_client.py  rrf_scorer.py  search_tool.py  search_types.py
tests/: conftest.py  factories.py
tests/integration/: conftest.py  test_analyzer_validation.py  test_cross_index_queries.py  test_postgres_client.py
tests/unit/: conftest.py  test_elasticsearch_setup.py  test_embedding_generator.py  test_error_handling.py  test_filter_builder.py  test_postgres_client.py  test_rrf_scorer.py  test_rrf_scoring.py  test_search_client_extended.py
(+9 files in other folders)
