[project]
name = "fundamental-analysis-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"aiohttp>=3.13.2",
	"alembic>=1.17.2",
	"asyncpg>=0.30.0",
	"elasticsearch<9.0.0",
	"greenlet>=3.2.4",
	"pyyaml>=6.0",
	"redis>=5.0.0",
	"sqlalchemy>=2.0.44",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.3.4",
	"pytest-asyncio>=0.25.2",
	"pytest-cov>=6.0.0",
	"pytest-xdist>=3.6.1",
	"pytest-mock>=3.14.0",
	"pytest-env>=1.1.5",
	"ruff>=0.8.4",
	"mypy>=1.14.0",
	"bandit[toml]>=1.8.0",
	"pre-commit>=4.0.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
	"-v",
	"--strict-markers",
	"--tb=short",
	"--cov=src",
	"--cov-report=term-missing",
	"--cov-report=html",
	"--cov-fail-under=95",
	"-n=auto",
]
markers = [
	"unit: Unit tests that don't require external services",
	"integration: Integration tests requiring external services (ES, Postgres, Redis)",
	"slow: Tests that take significant time to run",
	"requires_elasticsearch: Tests requiring Elasticsearch connection",
	"requires_postgresql: Tests requiring PostgreSQL connection",
	"requires_redis: Tests requiring Redis connection",
]

[tool.pytest_env]
ES_URL = "http://localhost:9200"
POSTGRES_URL = "postgresql://postgres:postgres@localhost:5432/fundamental_analysis_test"
REDIS_URL = "redis://localhost:6379/0"

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src", "tests"]
exclude = [
	".git",
	".venv",
	"__pycache__",
	"*.egg-info",
	".pytest_cache",
	".mypy_cache",
	".ruff_cache",
	"build",
	"dist",
	"src/storage/migrations",
]

[tool.ruff.lint]
select = [
	"F",   # Pyflakes
	"E",   # pycodestyle errors
	"W",   # pycodestyle warnings
	"I",   # isort
	"N",   # pep8-naming
	"UP",  # pyupgrade
	"S",   # flake8-bandit
	"B",   # flake8-bugbear
	"A",   # flake8-builtins
	"C4",  # flake8-comprehensions
	"ICN", # flake8-import-conventions
	"PIE", # flake8-pie
	"PT",  # flake8-pytest-style
	"SIM", # flake8-simplify
	"ARG", # flake8-unused-arguments
	"PTH", # flake8-use-pathlib
	"PL",  # Pylint
	"RUF", # Ruff-specific rules
]
ignore = [
	"S101", # Use of assert (needed for pytest)
	"S608", # Possible SQL injection (false positives with SQLAlchemy)
	"S104", # Possible hardcoded bind all interfaces (false positives)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = "elasticsearch.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "redis.*"
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build"]
skips = ["B101", "B601"]

[tool.coverage.run]
source = ["src"]
omit = ["*/migrations/*", "*/tests/*", "*/__pycache__/*", "*/.venv/*"]
parallel = true
branch = true

[tool.coverage.report]
fail_under = 95.0
show_missing = true
precision = 2
exclude_lines = [
	"pragma: no cover",
	"def __repr__",
	"raise AssertionError",
	"raise NotImplementedError",
	"if __name__ == .__main__.:",
	"if TYPE_CHECKING:",
	"@abstractmethod",
]

[dependency-groups]
dev = [
    "types-redis>=4.6.0.20241004",
]
