[project]
name = "fundamental-analysis-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"aiohttp>=3.13.2",
	"alembic>=1.17.2",
	"asyncpg>=0.30.0",
	"edgartools>=4.30.0",
	"elasticsearch<9.0.0",
	"greenlet>=3.2.4",
	"pandas>=2.3.3",
	"python-dotenv>=1.2.1",
	"pyyaml>=6.0",
	"redis>=7.1.0",
	"sqlalchemy>=2.0.44",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.3.4",
	"pytest-asyncio>=0.25.2",
	"pytest-cov>=6.0.0",
	"pytest-xdist>=3.6.1",
	"pytest-mock>=3.14.0",
	"pytest-env>=1.1.5",
	"ruff>=0.8.4",
	"pyright>=1.1.400",
	"bandit[toml]>=1.8.0",
	"pre-commit>=4.0.1",
	"testcontainers>=4.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
	"-v",
	"--strict-markers",
	"--tb=short",
	"-n=auto",
	"--dist=loadfile",
]
markers = [
	"unit: Unit tests that don't require external services",
	"integration: Integration tests requiring external services (uses testcontainers)",
	"slow: Tests that take significant time to run",
	"requires_elasticsearch: Tests requiring Elasticsearch (auto-started via testcontainers)",
	"requires_postgresql: Tests requiring PostgreSQL (auto-started via testcontainers)",
	"requires_redis: Tests requiring Redis (auto-started via testcontainers)",
]

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src", "tests"]
exclude = [
	".git",
	".venv",
	"__pycache__",
	"*.egg-info",
	".pytest_cache",
	".pyright",
	".ruff_cache",
	"build",
	"dist",
	"src/storage/migrations",
]

[tool.ruff.lint]
select = [
	"F",   # Pyflakes
	"E",   # pycodestyle errors
	"W",   # pycodestyle warnings
	"I",   # isort
	"N",   # pep8-naming
	"UP",  # pyupgrade
	"S",   # flake8-bandit
	"B",   # flake8-bugbear
	"A",   # flake8-builtins
	"C4",  # flake8-comprehensions
	"ICN", # flake8-import-conventions
	"PIE", # flake8-pie
	"PT",  # flake8-pytest-style
	"SIM", # flake8-simplify
	"ARG", # flake8-unused-arguments
	"PTH", # flake8-use-pathlib
	"PL",  # Pylint
	"RUF", # Ruff-specific rules
]
ignore = [
	"S101", # Use of assert (needed for pytest)
	"S608", # Possible SQL injection (false positives with SQLAlchemy)
	"S104", # Possible hardcoded bind all interfaces (false positives)
]

[tool.ruff.lint.per-file-ignores]
"research/*" = [
	"E501",   # Line too long (exploratory code)
	"PLR0912", # Too many branches
	"PLR0915", # Too many statements
	"PLR2004", # Magic value comparisons
	"PTH123",  # Use Path.open() (not critical for research)
	"B007",    # Unused loop control variable
	"E722",    # Bare except (acceptable for exploration)
	"S110",    # try-except-pass (acceptable for exploration)
	"PLC0415", # Import not at top (acceptable for exploration)
	"RUF015",  # Prefer next(iter()) over slice (stylistic)
	"RUF002",  # Ambiguous unicode characters (acceptable for research)
	"SIM102",  # Use single if (acceptable for readability in research)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
include = ["src", "tests"]
exclude = [
	"**/__pycache__",
	"**/.venv",
	"**/node_modules",
	"src/storage/migrations",
	"docs/design-flaws",
	"research",
]
stubPath = ""
venvPath = "."
venv = ".venv"
executionEnvironments = [
	{ root = "src" },
	{ root = "tests", extraPaths = ["src"] }
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "docs/design-flaws", "research"]
skips = ["B101", "B601"]

[tool.coverage.run]
source = ["src"]
omit = ["*/migrations/*", "*/tests/*", "*/__pycache__/*", "*/.venv/*"]
parallel = true
branch = true

[tool.coverage.report]
fail_under = 95.0
show_missing = true
precision = 2
exclude_lines = [
	"pragma: no cover",
	"def __repr__",
	"raise AssertionError",
	"raise NotImplementedError",
	"if __name__ == .__main__.:",
	"if TYPE_CHECKING:",
	"@abstractmethod",
]

[dependency-groups]
dev = ["types-redis>=4.6.0.20241004"]
